2007-03-03  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_movie.h: added get_member("_target") &
	set_member("_name")
	* gameswf/gameswf_impl.cpp: commented set_name("_root"),
	by default root has no name
	* gameswf/gameswf_action.cpp: removed assert from trace when object==null
	because it's not error but warning

2007-03-01  Vitaly Alexeev <tishka92@yahoo.com>

	Re-structuring
	* gameswf/gameswf_as_classes/as_netstream.(cpp,h):
	as_global_netstream_ctor moved from action.cpp
	* gameswf/gameswf_as_classes/as_string.(cpp,h),
	* gameswf/gameswf_as_classes/as_textformat.(cpp,h):
	added new files, moved from gameswf_textformat & gameswf_string
	* gameswf/gameswf_string.(cpp,h),
	* gameswf/gameswf_textformat.(cpp,h): removed
	* /gameswf/gameswf_dlist.cpp:
	commented <log_error("remove_display_object: no characters in display list\n")>
	because it's not error
	* gameswf/gameswf_text.cpp,
	* gameswf/gameswf_xml.cpp: updated #includes
	* gameswf/gameswf_action.cpp: math moved to as_classes folder
	* gameswf/win32/VC8/gameswf.vcproj: removed unused files & added new files

2007-03-01  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_impl.cpp: a bit optimization
	* gameswf/gameswf.h,
	* gameswf/gameswf_movie.h,
	* gameswf/gameswf_types.cpp: removed matrix::is_valid() because
	we uses tu_float

2007-03-01  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf.h: a bit optimization of tu_float
	* gameswf/gameswf_impl.cpp: added flash version 4 specific code

2007-03-01  Vitaly Alexeev <tishka92@yahoo.com>

	* a lot of files: void set_member() ==> bool set_member()
	* gameswf/gameswf_movie.h: added bool get_member() & bool set_member()
	to struct character	which contains the standart properties of character
	* sprite, button, text, video files: removed the processing of
	standart properties

2007-02-27  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_dlist.cpp,
	* gameswf/gameswf_text.cpp: fixed KILLFOCUS bug